# fastapi-boilerplate

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.override.yaml  docker-compose.yaml  example.env  pyproject.toml
app/: main.py
app/api/: dependencies.py  main.py
app/api/routes/: content.py  user.py
app/core/: db_provider.py  security.py  settings.py
app/exceptions/: handlers.py
app/models/: base.py  content.py  user.py
app/schemas/: content.py  user.py
app/services/: content.py  crud.py  user.py
app/utils/: common.py
tests/: conftest.py  test_security.py  test_utils.py
tests/routes/: test_contents_routes.py  test_users_routes.py
tests/schemas/: test_contents.py  test_users.py
